fix: hero bg shows faces, remove broken video #2
- background-position: center top (faces no longer cropped)
- Remove broken MOV video (2nd video in gallery)

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ button {
     position: absolute;
     inset: 0;
     background-size: cover;
-    background-position: center;
+    background-position: center top;
     background-repeat: no-repeat;
 }
 
